--- a/tests/clientServerTest/index.html
+++ b/tests/clientServerTest/index.html
@@ -1,54 +1,22 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WebAuthn Registration Demo</title>
-    <style>
-        body {
-            font-family: sans-serif;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            padding-top: 50px;
-            background-color: #f4f4f4;
-        }
-        button {
-            padding: 10px 20px;
-            font-size: 16px;
-            cursor: pointer;
-            background-color: #007bff;
-            color: white;
-            border: none;
-            border-radius: 5px;
-            margin-top: 20px;
-        }
-        button:hover {
-            background-color: #0056b3;
-        }
-        #message {
-            margin-top: 20px;
-            padding: 10px;
-            border-radius: 5px;
-            min-width: 200px;
-            text-align: center;
-        }
-        .success {
-            background-color: #d4edda;
-            color: #155724;
-            border: 1px solid #c3e6cb;
-        }
-        .error {
-            background-color: #f8d7da;
-            color: #721c24;
-            border: 1px solid #f5c6cb;
-        }
-    </style>
-</head>
 <body>
-    <h1>WebAuthn Registration</h1>
-    <button id="registerButton">Register New Credential</button>
-    <div id="message"></div>
+    <h1>WebAuthn Demo</h1>
+
+    <div style="margin-bottom: 30px;">
+        <h2>Registration</h2>
+        <button id="registerButton">Register New Credential</button>
+        <p><em>Creates a new user and credential.</em></p>
+    </div>
+
+    <div style="margin-bottom: 30px;">
+        <h2>Login</h2>
+        <label for="username">Username:</label>
+        <input type="text" id="username" name="username" placeholder="e.g., user_xxxx">
+        <button id="loginButton">Login</button>
+        <p><em>Enter username created during registration.</em></p>
+        <div id="loggedInUser" style="margin-top: 10px; font-weight: bold;"></div>
+    </div>
+
+    <div id="message" style="margin-top: 20px;"></div>
 
     <script src="./client.js"></script>
 </body>
