--- a/webauthn/tests/clientServerTest/index.html
+++ b/webauthn/tests/clientServerTest/index.html
@@ -3,8 +3,15 @@
 
     <div style="margin-bottom: 30px;">
         <h2>Registration</h2>
+        <label for="registerUsername">Username:</label>
+        <input type="text" id="registerUsername" name="registerUsername" placeholder="Enter username">
         <button id="registerButton">Register New Credential</button>
-        <p><em>Creates a new user and credential.</em></p>
+        <button id="showCredentialsButton">Show My Credentials</button>
+        <p><em>Create a new credential or add one to existing user.</em></p>
+
+        <div id="authenticatorInfo" style="margin-top: 10px; border: 1px solid #ccc; padding: 10px; display: none;">
+        </div>
+        <div id="credentialList" style="margin-top: 10px;"></div>
     </div>
 
     <div style="margin-bottom: 30px;">
@@ -18,6 +25,71 @@
 
     <div id="message" style="margin-top: 20px;"></div>
 
+    <style>
+        .success {
+            color: green;
+            font-weight: bold;
+        }
+
+        .error {
+            color: red;
+            font-weight: bold;
+        }
+
+        #authenticatorInfo {
+            background-color: #f8f8f8;
+            border-radius: 4px;
+        }
+
+        #credentialList {
+            margin-top: 15px;
+        }
+
+        .credential-list {
+            padding-left: 0;
+            list-style-type: none;
+        }
+
+        .credential-item {
+            background-color: #f8f8f8;
+            border: 1px solid #ddd;
+            border-radius: 4px;
+            margin-bottom: 10px;
+            padding: 12px;
+        }
+
+        .credential-name {
+            font-weight: bold;
+            font-size: 1.1em;
+            margin-bottom: 4px;
+        }
+
+        .credential-details {
+            display: flex;
+            justify-content: space-between;
+            margin-bottom: 4px;
+            font-size: 0.9em;
+        }
+
+        .credential-type {
+            background-color: #e7f3ff;
+            padding: 2px 8px;
+            border-radius: 12px;
+            color: #0066cc;
+        }
+
+        .credential-date {
+            color: #666;
+        }
+
+        .credential-aaguid {
+            font-size: 0.8em;
+            color: #777;
+            font-family: monospace;
+        }
+    </style>
+
     <script src="./client.js"></script>
 </body>
-</html> 
+
+</html>
